# lsp

./: CMakeLists.txt  NOTICE  README.md
.github/workflows/: ci.yml
samples/: README.md  package.json
samples/client/: package.json
samples/client/src/: extension.ts
samples/client/src/test/: server.test.ts
samples/client/testFixture/schemas/: company.zap  error_company.zap  gen-example.zap
samples/client/testFixture/schemas/common/: common.zap
samples/client/testFixture/schemas/common2/: common.zap
src/: compilation_manager.cpp  lsp_message_handler.cpp
